Issue #1762972: Readded the reload() function as imp.reload()